--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
         }
 
         .ticket {
-            background-color: white;
+            background-color: #F2F2F2;
             padding: 15px;
             margin-bottom: 15px;
-            border-radius: 10px;
             box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
@@ -36,18 +35,17 @@
 
         .ticket-number {
             font-size: 22px;
-            color: #2ecc71;
+            color: #43B033;
             font-weight: bold;
-            background-color: #f8f8f8;
+            background-color: white;
             display: inline-block;
             padding: 8px 16px;
-            border-radius: 5px;
             margin-bottom: 10px;
         }
 
         .ticket-number span {
             font-size: 12px;
-            color: #2ecc71;
+            color: #43B033;
             margin-right: 5px;
         }
 
@@ -58,7 +56,7 @@
 
         .checkmark {
             display: inline-block;
-            background-color: #2ecc71;
+            background-color: #43B033;
             color: white;
             border-radius: 50%;
             width: 20px;
@@ -81,8 +79,8 @@
             margin: 10px 0;
             font-size: 16px;
             background-color: white;
-            border: 1px solid #2ecc71;
-            color: #2ecc71;
+            border: 1px solid #43B033;
+            color: #43B033;
             border-radius: 4px;
             cursor: pointer;
         }
@@ -112,7 +110,7 @@
 
         .back-button {
             font-size: 24px;
-            color: #2ecc71;
+            color: #43B033;
             cursor: pointer;
             margin-right: 10px;
         }
@@ -133,6 +131,7 @@
             background-color: #2ecc71;
             position: relative;
             margin-right: 8px;
+            vertical-align: middle;
         }
 
         .check-icon::after {
