--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
         .button-area button {
             width: 100%;
+            height: 60px;
             max-width: 1000px;
             padding: 12px 0;
             margin: 10px 0;
@@ -158,11 +159,11 @@
     <div style="height: 60px;"></div>
 
 
-    <div class="note">
+    <div class="note" style="font-size: 14px">
         抽選の結果、以下のアーティストが当選されました。当日は、前方エリア優先入場待機エリアでこの画面をご提示ください。<br><br>
         ※同行者のメールアドレスを設定した場合、その方のアプリの同画面にも結果が反映されています。
     </div>
-    <div style="margin: 20px 0 10px;" contenteditable="true">8/9（土）</div>
+    <div style="margin: 20px 0 10px;" contenteditable="true" style="font-size: 14px">8/9（土）</div>
     <hr style="border: none; border-top: 0.5px solid #ccc; margin: 10px 0 20px;">
 
     <div class="ticket">
