--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             width: 20px;
             height: 20px;
             border-radius: 50%;
-            background-color: #2ecc71;
+            background-color: #43B033;
             position: relative;
             margin-right: 8px;
             vertical-align: middle;
