--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         .ticket {
             background-color: #F2F2F2;
-            padding: 15px;
+            padding: 30px;
             margin-bottom: 15px;
             box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
             text-align: center;
@@ -39,7 +39,7 @@
             font-weight: bold;
             background-color: white;
             display: inline-block;
-            padding: 8px 16px;
+            padding: 8px 30px;
             margin-bottom: 10px;
         }
 
@@ -168,19 +168,22 @@
 
     <div class="ticket">
         <div class="artist" contenteditable="true">つばきファクトリー</div>
-        <div class="ticket-number" contenteditable="true"><span>Ticket No.</span>0032</div>
+        <div class="ticket-number"><span style="font-weight: normal;">Ticket No.</span><span style="font-size: 25px;"
+                contenteditable="true">0001</div>
         <div class="price"><span class="check-icon"></span> ¥ 500</div>
     </div>
 
     <div class="ticket">
         <div class="artist" contenteditable="true">日向坂46</div>
-        <div class="ticket-number" contenteditable="true"><span>Ticket No.</span>0401</div>
+        <div class="ticket-number"><span style="font-weight: normal;">Ticket No.</span><span style="font-size: 25px;"
+                contenteditable="true">0010</div>
         <div class="price"><span class="check-icon"></span> ¥ 500</div>
     </div>
 
     <div class="ticket">
         <div class="artist" contenteditable="true">私立恵比寿中学</div>
-        <div class="ticket-number" contenteditable="true"><span>Ticket No.</span>0170</div>
+        <div class="ticket-number"><span style="font-weight: normal;">Ticket No.</span><span style="font-size: 25px;"
+                contenteditable="true">0100</div>
         <div class="price"><span class="check-icon"></span> ¥ 500</div>
     </div>
 
