--- a/index.html
+++ b/index.html
@@ -12,18 +12,6 @@
             background-color: #f4f4f4;
         }
 
-        .header {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            height: 60px;
-            background-color: #ffffff;
-            display: flex;
-            align-items: center;
-            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-        }
-
         .back-button {
             font-size: 24px;
             color: #43B033;
@@ -55,6 +43,7 @@
             color: #43B033;
             cursor: pointer;
             margin-right: 10px;
+            margin-left: -16px;
         }
 
         .title {
@@ -87,6 +76,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            border-radius: 8px;
             font-size: 16px;
         }
 
@@ -114,6 +104,7 @@
         }
 
         .arrow {
+            font-size: 10px;
             color: #43B033;
         }
     </style>
