--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <div class="section">
         <div class="section-title">アカウント情報</div>
-        <div class="item">
+        <a href="member_info.html" class="item" style="text-decoration: none; color: inherit;">
             <span>会員登録情報</span>
             <span class="arrow">＞</span>
         </div>
