--- a/member_info.html
+++ b/member_info.html
@@ -16,12 +16,12 @@
     .header {
       position: fixed;
       top: 0;
+      left: 0;
       width: 100%;
       height: 60px;
-      background-color: #F2F2F2;
+      background-color: #f4f4f4;
       display: flex;
       align-items: center;
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
       z-index: 1000;
     }
 
@@ -31,7 +31,6 @@
       padding: 0 16px;
       cursor: pointer;
       text-decoration: none;
-      margin-left: -20px;
     }
 
     .header-title {
@@ -50,7 +49,7 @@
     }
 
     .card {
-      background-color: #F2F2F2;
+      background-color: #f4f4f4;
       margin: 16px;
       padding: 20px;
       border-radius: 10px;
