--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
             top: 0;
             left: 0;
             width: 100%;
-            background-color: #ffffff;
+            background-color: #f4f4f4;
             padding: 0;
             margin: 0;
             z-index: 1000;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .header-container {
