--- a/ticket_page.html
+++ b/ticket_page.html
@@ -20,7 +20,7 @@
     }
 
     .ticket {
-      background-color: #F2F2F2;
+      background-color: #f4f4f4;
       padding: 30px;
       margin-bottom: 15px;
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
@@ -94,11 +94,10 @@
       top: 0;
       left: 0;
       width: 100%;
-      background-color: #ffffff;
+      background-color: #f4f4f4;
       padding: 0;
       margin: 0;
       z-index: 1000;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
 
     .header-container {
