--- a/ticket_page.html
+++ b/ticket_page.html
@@ -21,7 +21,7 @@
 
     .ticket {
       background-color: #f4f4f4;
-      padding: 30px;
+      padding: 15px;
       margin-bottom: 15px;
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
       text-align: center;
@@ -31,16 +31,17 @@
     .artist {
       font-size: 18px;
       font-weight: bold;
-      margin-bottom: 10px;
+      margin-bottom: 3px;
     }
 
     .ticket-number {
-      font-size: 22px;
+      font-size: 20px;
       color: #43B033;
       font-weight: bold;
       background-color: white;
       display: inline-block;
-      padding: 8px 30px;
+      padding: 5px 10px;
+      margin-top: 10px;
       margin-bottom: 10px;
     }
 
@@ -53,6 +54,7 @@
     .price {
       color: #000;
       font-size: 16px;
+      margin-bottom: 10px;
     }
 
     .checkmark {
@@ -189,22 +191,22 @@
 
   <div class="ticket">
     <p id="artist1" contenteditable="true" class="artist">つばきファクトリー</p>
-    <p id="ticket-number1" class="ticket-number"><span style="font-weight: normal;">Ticket No.</span><span
-        style="font-size: 25px;" contenteditable="true">0001</p>
+    <p id="ticket-number1" class="ticket-number"><span style="font-size: 14px; font-weight: normal;">Ticket
+        No.</span><span style="font-size: 32px;" contenteditable="true">0001</p>
     <div class="price"><span class="check-icon"></span> ¥ 500</div>
   </div>
 
   <div class="ticket">
     <p id="artist2" contenteditable="true" class="artist">日向坂46</p>
-    <p id="ticket-number2" class="ticket-number"><span style="font-weight: normal;">Ticket No.</span><span
-        style="font-size: 25px;" contenteditable="true">0010</p>
+    <p id="ticket-number2" class="ticket-number"><span style="font-size: 14px; font-weight: normal;">Ticket
+        No.</span><span style="font-size: 32px;" contenteditable="true">0010</p>
     <div class="price"><span class="check-icon"></span> ¥ 500</div>
   </div>
 
   <div class="ticket">
     <p id="artist3" contenteditable="true" class="artist">私立恵比寿中学</p>
-    <p id="ticket-number3" class="ticket-number"><span style="font-weight: normal;">Ticket No.</span><span
-        style="font-size: 25px;" contenteditable="true">0100</p>
+    <p id="ticket-number3" class="ticket-number"><span style="font-size: 14px; font-weight: normal;">Ticket
+        No.</span><span style="font-size: 32px;" contenteditable="true">0100</p>
     <div class="price"><span class="check-icon"></span> ¥ 500</div>
   </div>
 
