--- a/ticket_page.html
+++ b/ticket_page.html
@@ -191,22 +191,22 @@
 
   <div class="ticket">
     <p id="artist1" contenteditable="true" class="artist">つばきファクトリー</p>
-    <p id="ticket-number1" class="ticket-number"><span style="font-size: 14px; font-weight: normal;">Ticket
-        No.</span><span style="font-size: 32px;" contenteditable="true">0001</p>
+    <p class="ticket-number"><span style="font-size: 14px; font-weight: normal;">Ticket
+        No.</span><span id="ticket-number1" style="font-size: 32px;" contenteditable="true">0001</p>
     <div class="price"><span class="check-icon"></span> ¥ 500</div>
   </div>
 
   <div class="ticket">
     <p id="artist2" contenteditable="true" class="artist">日向坂46</p>
-    <p id="ticket-number2" class="ticket-number"><span style="font-size: 14px; font-weight: normal;">Ticket
-        No.</span><span style="font-size: 32px;" contenteditable="true">0010</p>
+    <p class="ticket-number"><span style="font-size: 14px; font-weight: normal;">Ticket
+        No.</span><span id="ticket-number2" style="font-size: 32px;" contenteditable="true">0010</p>
     <div class="price"><span class="check-icon"></span> ¥ 500</div>
   </div>
 
   <div class="ticket">
     <p id="artist3" contenteditable="true" class="artist">私立恵比寿中学</p>
-    <p id="ticket-number3" class="ticket-number"><span style="font-size: 14px; font-weight: normal;">Ticket
-        No.</span><span style="font-size: 32px;" contenteditable="true">0100</p>
+    <p class="ticket-number"><span style="font-size: 14px; font-weight: normal;">Ticket
+        No.</span><span id="ticket-number3" style="font-size: 32px;" contenteditable="true">0100</p>
     <div class="price"><span class="check-icon"></span> ¥ 500</div>
   </div>
 
